# Splinoids

./: .gitignore  .gitmodules  CMakeLists.txt  Qt_suppressions.lsan
configs/: BOCData.config  Critter.config  ES_HyperNEAT.config  Environment.config  EvolvableSubstrate.config  HyperNEAT.config  PTree.config  Simulation.config  Spline.config  Vision.config  Visualisation.config
data/: small.env.json
doc/: energy_flow.tex  outline.tex  slides.tex
doc/annexes/: splinoids_anatomy.spln.json  splinoids_dimorphism.spln.json  splinoids_growth.spln.json  splinoids_large.spln.json  splinoids_motors.spln.json  splinoids_vision_predator.spln.json  splinoids_vision_prey.spln.json
scripts/: blended_morphos_fresco.sh  do_evals.sh  dynamics.sh  field_dynamics.sh  global_settings.sh  mannwhitney.py  monitor_timelines_predation.sh  mount_remote_evos.sh  plot_3x3_violins.sh  plot_brain.sh  plot_carnivorous.sh  plot_histogram.gp  plot_trajectories.sh  pp-make_video.sh  pp_evolution_summary.sh  scorrelation.py  view_efficiency.sh  violin_plot.gp
scripts/alife2021/: fitnesses_summary.sh  lesions_effect.sh  make_sidebyside_video.sh  make_video.sh  mw_neural_clustering.py  plot_behavior.sh  plot_communication_against_modules.original.sh  plot_communication_against_modules.sh  plot_fear_response.sh  plot_trajectories.sh  reorder_and_filter_columns.awk  run_summary.sh  spearmann.py  strategies_classification.sh  summary.sh  violin_plot.gp  wilcoxon.py
scripts/language/: evaluate.sh  extract_champions.sh  genealogy.sh  generate_all.sh  generate_behavior.sh  monitor_evolution.gp  plot_behavior.sh  plot_evolution.gp
scripts/mortal_kombat/: abmhub_slides_movies.sh  all_clusters.sh  check_determinism.sh  clusters.sh  current_gnuplotter.sh  debug_combat_intensity.gp  debug_memory.sh  evaluate.sh  generate_all.sh  generate_behavior.sh  genetic_lineage.sh  id_cards.sh  lineage.sh  make_video.sh  matrix_kombat.sh  metamodules_distribution.sh  metamodules_lineage.py  metamodules_lineage.sh  metamodules_lineage.summary.sh  monitor_evolution.gp  morphologies.sh  mw_neural_clustering.py  plot_behavior.sh  plot_evolution.gp  stats_violin_plots.sh  view_champions.sh  vocalisation_metrics.py
src/: CMakeLists.txt  enumarray.hpp  evaluator.cpp  simulator.cpp  timelines.cpp  visualizer.cpp  visualuator.cpp  watchmaker.cpp
src/alife2021/: evaluator.cpp  evolver.cpp  indevaluator.cpp  indevaluator.h  scenario.cpp  scenario.h  visualizer.cpp
src/experiments/ecosystem/: CMakeLists.txt  evaluator.cpp  simulator.cpp  timelines.cpp  visualizer.cpp  visualuator.cpp
src/experiments/language/: CMakeLists.txt  evaluator.cpp  evolver.cpp  indevaluator.cpp  indevaluator.h  scenario.cpp  scenario.h  visualizer.cpp
src/experiments/life-dinner/: CMakeLists.txt  evolver.cpp  indevaluator.cpp  indevaluator.h  scenario.cpp  scenario.h  visualizer.cpp
src/experiments/mkombat/: CMakeLists.txt  evolver.cpp  indevaluator.cpp  indevaluator.h  scenario.h  visualizer.cpp
src/genotype/: config.h  critter.cpp  critter.h  environment.cpp  environment.h
src/gui/: actionsbuilder.hpp  geneticmanipulator.cpp  geneticmanipulator.h  joystick.cpp  joystick.h  mainview.cpp  mainview.h  statsview.cpp  statsview.h
src/hyperneat/: genotype.cpp  genotype.h  phenotype.cpp  phenotype.h
src/misc/: watchmaker_classes.cpp  watchmaker_classes.h
src/mkombat/: coevolutionga.cpp  coevolutionga.h  evaluator.cpp  evolver.cpp  indevaluator.cpp  indevaluator.h  scenario.cpp  scenario.h  team_tool.cpp  visualizer.cpp
src/simu/: box2dutils.cpp  box2dutils.h  config.cpp  config.h  critter.cpp  critter.h  environment.cpp  environment.h  foodlet.cpp  foodlet.h  plant.cpp  plant.h  simulation.cpp  simulation.h  ssga.cpp  ssga.h  time.cpp  time.h
src/tests/: tester.cpp
src/toys/shapemaker/: CMakeLists.txt  main.cpp  watchmaker_classes.cpp  watchmaker_classes.h
src/toys/songmaker/: CMakeLists.txt  bwwindow.cpp  bwwindow.h  config.cpp  config.h  main.cpp  qflowlayout.cpp
src/toys/songmaker/sound/: generator.cpp  generator.h  visualizer.cpp  visualizer.h
src/visu/: b2debugdrawer.cpp  b2debugdrawer.h  config.cpp  config.h  critter.cpp  critter.h  environment.cpp  environment.h  foodlet.cpp  foodlet.h  geneticmanipulator.cpp  geneticmanipulator.h  graphicsimulation.cpp  graphicsimulation.h  mainview.cpp  mainview.h  obstacle.cpp  obstacle.h  plant.cpp  plant.h
